--- a/app/src/main/res/layout/activity_third_formation.xml
+++ b/app/src/main/res/layout/activity_third_formation.xml
@@ -4,9 +4,24 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin">
+
+
+    <Button
+        android:id="@+id/third_formation_button_add_contact"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:text="@string/third_formation_button_add"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textStyle="bold"
+        android:background="@android:color/darker_gray"
+        android:textColor="@android:color/white"
+        />
+
 
     <ListView
         android:id="@+id/third_formation_listview"
